@@ -1,20 +1,20 @@
 package com.technokratos.agona.service.impl;
 
-import com.technokratos.agona.config.MinioConfig;
+import com.technokratos.agona.config.properties.MinioProperties;
 import com.technokratos.agona.exception.file.FileStorageException;
 import com.technokratos.agona.service.FileService;
 import io.minio.*;
 import io.minio.errors.MinioException;
-import io.minio.http.Method;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.FilenameUtils;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.security.GeneralSecurityException;
 import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 
 @Slf4j
 @Service
@@ -22,34 +22,41 @@ import java.util.concurrent.TimeUnit;
 public class FileServiceMinioImpl implements FileService {
 
     private final MinioClient minioClient;
-    private final MinioConfig minioConfig;
+    private final MinioProperties minioProperties;
 
     @Override
     public String uploadFile(MultipartFile file) {
         try {
-            String objectName = String.format("%s-%s",UUID.randomUUID(), file.getOriginalFilename());
+            String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
+            String objectName = "%s.%s".formatted(UUID.randomUUID().toString(), extension);
 
             minioClient.putObject(
                     PutObjectArgs.builder()
-                            .bucket(minioConfig.getBucketName())
+                            .bucket(minioProperties.getBucketName())
                             .object(objectName)
                             .stream(file.getInputStream(), file.getSize(), -1)
                             .contentType(file.getContentType())
                             .build()
             );
+            log.info("File uploaded successfully to MinIO: {}", objectName);
 
-            return minioClient.getPresignedObjectUrl(
-                    GetPresignedObjectUrlArgs.builder()
-                            .method(Method.GET)
-                            .bucket(minioConfig.getBucketName())
-                            .object(objectName)
-                            .expiry(7, TimeUnit.DAYS)
-                            .build()
-            );
+            return objectName;
 
         } catch (MinioException | IOException | GeneralSecurityException e) {
-            log.error("MinIO upload error for file: {}", file.getOriginalFilename(), e);
+            log.error("MinIO upload error", e);
             throw new FileStorageException("Failed to upload file to MinIO", e);
+        }
+    }
+
+    @Override
+    public void deleteFile(String objectName) {
+        try {
+            minioClient.removeObject(RemoveObjectArgs.builder()
+                    .bucket(minioProperties.getBucketName())
+                    .object(objectName).build());
+            log.info("Successfully deleted file {} from MinIO", objectName);
+        } catch (Exception e) {
+            log.error("Failed to delete file {}", objectName, e);
         }
     }
 }
